# rel-bball-analytics

./: .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  settings.py  setup.py
.github/workflows/: github-actions.yml
migrations/: env.py
migrations/versions/: 5657db845143_.py
notebooks/: game_logs.ipynb  player_search.ipynb
rel_bball_analytics/: __init__.py  api.py  config.py  database.py  settings.py  setup.py
rel_bball_analytics/games/: data_source.py  game_log.py  models.py  styles.py  utils.py
rel_bball_analytics/games/tests/: test_data_source.py  test_game_log.py  test_models.py
rel_bball_analytics/players/: data_source.py  models.py  player_info.py  player_search.py  search.py  styles.py  summary_stats.py  table.py  utils.py  views.py
rel_bball_analytics/players/tests/: test_data_source.py  test_models.py  test_player_info.py  test_player_search.py  test_search.py  test_summary_stats.py
rel_bball_analytics/static/css/: player-details.css
rel_bball_analytics/static/py/: games.py  players.py
rel_bball_analytics/static/styles/: base.css  players.py
rel_bball_analytics/statistics/: data_source.py  models.py  summary.py  utils.py
rel_bball_analytics/statistics/tests/: test_data_source.py  test_models.py  test_summary.py
rel_bball_analytics/templates/: base.html  home.html  index.html
rel_bball_analytics/templates/players/: details.html  search.html  search_result.html
rel_bball_analytics/tests/fixtures/: database.py
templates/: base.html
(+15 files in other folders)
