[tool.poetry]
name = "rel-bball-analytics"
version = "1.2.1"
description = ""
authors = ["Arielle Murad <ariellem99@gmail.com>"]
readme = "README.md"
packages = [{include = "rel_bball_analytics"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
requests = "^2.28.2"
notebook = "^6.5.2"
python-dotenv = "^0.21.1"
pandas = "^1.5.3"
pytest = "^7.2.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
